--- a/pray.html
+++ b/pray.html
@@ -66,7 +66,7 @@
         </ul>
     </div>
 
-    <p>All rights reserved &copy; 2022, David Saraduki &trade;</p>
+    <p>All rights reserved &copy; 2022, Daniel Mukenya &trade;</p>
 
 
 </body>
