--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@ From a small assembly with a morning service attendance of about 20 to 30 people
         </ul>
     </div>
 
-    <p>All rights reserved &copy; 2022, David Saraduki &trade;</p>
+    <p>All rights reserved &copy; 2022, Daniel Mukenya &trade;</p>
 </body>
 </body>
 </html>
