--- a/child.html
+++ b/child.html
@@ -68,7 +68,7 @@
         </ul>
     </div>
 
-    <p>All rights reserved &copy; 2022, David Saraduki &trade;</p>
+    <p>All rights reserved &copy; 2022, Daniel Mukenya &trade;</p>
 </body>
 </body>
 </html>
