--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
             </ul>
         </div>
     
-        <p>All rights reserved &copy; 2022, David Saraduki &trade;</p>
+        <p>All rights reserved &copy; 2022, Daniel Mukenya &trade;</p>
                
      </div>
 </body>
