--- a/fellow.html
+++ b/fellow.html
@@ -56,7 +56,7 @@
         </div>
     
         <div class="right">
-         All rights reserved &copy; 2022, David Saraduki &trade;
+         All rights reserved &copy; 2022, Daniel Mukenya &trade;
         </div>
      </div>
 </body>
